--- a/frontend/src/components/MemoContainer/MemoContainer.css
+++ b/frontend/src/components/MemoContainer/MemoContainer.css
@@ -2,7 +2,7 @@
   display: inline-block;
   width: max-content;
   border: 3px solid #333;
-  margin: 15px;
+  margin: 15px 15px 15px 0;
   background-color: white;
   position: relative;
   border-radius: 8px;
@@ -50,6 +50,7 @@
 .memo-content {
   padding: 15px 20px;
   line-height: 1.6;
+  text-align: left; /* keep text left-aligned */
 }
 
 .memo-content p {
@@ -58,16 +59,20 @@
 
 .memo-content ul {
   margin: 0.5em 0;
-  padding-left: 1.5em;
+  padding-left: 1.1em; /* modest indent */
+  list-style-type: disc;
+  list-style-position: outside; /* keep bullets outside to avoid mid-shift */
 }
 
 .memo-content ul ul {
   margin: 0.2em 0;
-  padding-left: 1.2em;
+  padding-left: 1.1em;
 }
 
 .memo-content li {
   margin: 0.2em 0;
+  text-indent: 0;
+  padding-left: 0.2em; /* bring text slightly closer to marker */
 }
 
 .memo-body {
